<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sky"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/choose_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city_choose"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.064" />

    <RadioGroup
        android:id="@+id/choose_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_city">

        <CheckBox
            android:id="@+id/city1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_1"
            app:buttonTint="@color/button" />

        <CheckBox
            android:id="@+id/city2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_2"
            app:buttonTint="@color/button" />

        <CheckBox
            android:id="@+id/city3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_3"
            app:buttonTint="@color/button" />

        <CheckBox
            android:id="@+id/city4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_4"
            app:buttonTint="@color/button" />

        <CheckBox
            android:id="@+id/city5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_5"
            app:buttonTint="@color/button" />

        <CheckBox
            android:id="@+id/city6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_6"
            app:buttonTint="@color/button" />
    </RadioGroup>

    <TextView
        android:id="@+id/choose_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_city"
        app:layout_constraintVertical_bias="0.479" />

    <RadioGroup
        android:id="@+id/choose_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_time"
        app:layout_constraintVertical_bias="0.206">

        <CheckBox
            android:id="@+id/time1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today"
            app:buttonTint="@color/button" />

        <CheckBox
            android:id="@+id/time2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tomorrow"
            app:buttonTint="@color/button" />

        <CheckBox
            android:id="@+id/time3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three_days"
            app:buttonTint="@color/button" />

        <CheckBox
            android:id="@+id/time4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ten_days"
            app:buttonTint="@color/button" />
    </RadioGroup>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#36B0E7"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_2" />


</androidx.constraintlayout.widget.ConstraintLayout>